test/pos/conj-rhs.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((v1 Int)) (=> True (and (< 0 1) (> 1 0)))))
